# dual-gate-mpc

./: CITATION.cff  Cargo.toml  LICENSE-MIT  NOTICE  README.md
src/: field.rs  lib.rs  pedersen.rs  protocol.rs  shamir.rs
tests/: dual_gate.rs
